--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: My Website
+title: Mobile Dashboard Website
 
 # Your name to show in the footer
 author: Some Person
